PROTON-1818 / PROTON-1815: [C++ binding] Tidy up some aspects of handling the null value